--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - main   # or your branch
+      - master   # or your branch
 
 jobs:
   deploy:
@@ -20,7 +20,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            cd ~/myapp
+            cd ~/nodeapp
             git pull origin main
             npm install
             pm2 restart myapp
