--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,24 +3,25 @@ name: Deploy to EC2
 on:
   push:
     branches:
-      - master   # or your branch
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Deploy to EC2
         uses: appleboy/ssh-action@v0.1.10
         with:
-          host: ${{ secrets.EC2_HOST }}
+          host: ${{ secrets.EC2_HOST }}       # example: 3.93.11.181
           username: ubuntu
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ secrets.EC2_SSH_KEY }}     # your PEM private key
           script: |
+            cd ~/nodeapp || git clone https://github.com/jas-fullstack/nodeapp.git ~/nodeapp
             cd ~/nodeapp
             git pull origin main
             npm install
-            pm2 restart myapp
+            pm2 restart myapp || pm2 start app.js --name myapp
